 - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
   in the formats that use GenotypeOutputFormat (e.g., genotypes, compare_groups, allele_frequency).
   The method of Krawitz et al is used to determine the equivalent indel region for each possible candidate.
   After possible realignment, and filtering to remove possible errors, EIR are reported with their frequencies.
>>1.9.8
 - The BaseStats utility was transformed into a Goby mode (base-stats). The new mode has the ability to tally occurrence
   of CpX motifs in reads. Useful as a proxy to the amount of unconverted Cs in bisulfite converted reads.
 - The methyl-stats mode take a VCF file produced by Goby methylation output and a genome and calculates various
   statistics about the distribution of fragment lengths between CpG interrogated by the assay.
 - FDR mode now accepts --column-selection-filter to select columns matching string.
 - Proof of principle that protocol buffer can seamlessly cohabit with data-specific compression schemes. The
   --codec option on fasta-to-compact is introduced to activate compression of reads when writing compact reads.
   The codec provided (called read-codec-1) achieves about 10-12% better compression of read files than pure
   protocol-buffer encoding. This read-codec-1 codec stores bases and quality scores with an arithmetic coder in
   a protocol buffer field called 'compressed_data'. Please note that we do not recommend using this option at
   this stage since the C/C++ APIs cannot load data encoded with this codec at this time.
 - Add ability to run alignment-to-annotation-counts on a specific genomic region (see --start-position and
   --end-position).
 - alignment-to-annotation mode has a new option (--remove-shared-segments). When active, this option will remove
   annotation segments when they partially overlap with more than one primary annotation id. When this option is